# oblong

./: Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
src/: appearance.rs  config.rs  defaults.rs  gui.rs  main.rs  outputs.rs  snap.rs  switcher.rs
