[package]
name = "oblong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
iced = "0.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
