[package]
name = "oblong"
version = "0.1.0"
edition = "2021"
description = "macOS-like window management for Sway — snap, MRU switching, Super key shortcuts, and a GUI config editor"
license = "MIT"
repository = "https://github.com/mvhenten/oblong"
readme = "README.md"
keywords = ["sway", "wayland", "window-manager", "tiling", "macos"]
categories = ["command-line-utilities"]
exclude = [".github/", "TODO.md", "screenshots/"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
iced = "0.13"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
